Added PostgreSQL 9.6 , workflow fix, config plugin fix